# openzim

./: .gitignore  .gitreview  ChangeLog  Makefile.am  README  README.md  TntReaderConfig  apt-get-deps  build-all  configure.in  tntnet.conf  tntnet.properties
db/: words-addindex.sh  zeno-postgresql-x.sql  zeno-postgresql.sql  zeno-sqlite.sql  zeno.sql  zim-sqlite.sql
include/: Makefile.am
include/zeno/: article.h  articlebase.h  articlesearch.h  bunzip2stream.h  bzip2.h  bzip2stream.h  cache.h  deflatestream.h  dirent.h  endian.h  error.h  file.h  fileheader.h  fileimpl.h  fileiterator.h  files.h  indexarticle.h  inflatestream.h  noncopyable.h  qunicode.h  refcounted.h  search.h  smartptr.h  stringlessignorecase.h  unicode.h  zeno.h  zintstream.h
skin/: skin.css  skin.html
src/webapp/: Makefile.am  article.ecpp  backgroundreader.cpp  backgroundreader.h  browseresults.ecpp  browsescreen.ecpp  global.ecpp  linkstatic.sh  main.cpp  notfound.ecpp  number.ecpp  pager.ecpp  random.ecpp  search.ecpp  searcharticles.ecpp  searchresults.ecpp  skin.cpp  skin.ecpp  skin.h  subarticle.ecpp  tntnet.conf  zenocomp.cpp  zenocomp.ecpp  zenowp_css.css
src/wikidownloader/: Makefile.am  dumparticle.cpp  getarticles.cpp  putarticle.cpp  trycompress.cpp  uncompress.cpp
src/zenoDump/: Makefile.am  log.properties  zenoDump.cpp  zenoIntStream.cpp  zenoQUnicode.cpp  zenoSearch.cpp
src/zenoindexer/: Makefile.am  articleparser.cpp  articleparser.h  indexertest.cpp  trivials.sql  zenoindexer.cpp
src/zenolib/: Makefile.am  article.cpp  articlebase.cpp  articlesearch.cpp  bunzip2stream.cpp  bzip2.cpp  bzip2stream.cpp  deflatestream.cpp  dirent.cpp  file.cpp  fileheader.cpp  fileimpl.cpp  files.cpp  indexarticle.cpp  inflatestream.cpp  inflatestream.h  qunicode.cpp  search.cpp  unicode.cpp  zenocomp.cpp  zintstream.cpp
src/zenowriter/: Makefile.am  compressor.cpp  compressor.h  zenocompressor.cpp  zenocompressor.h  zenowriter.cpp  zenowriter.h
src/zimDump/: Makefile.am
src/zimindexer/: indexertest.cpp  trivials.sql
src/zimwriter/: compressor.cpp  zimcompressor.cpp  zimcompressor.h
tntzenoreader/include/zim/: fileheader.h
tntzenoreader/src/: tntnet.conf
tntzenoreader/src/wikidownloader/: getarticles.cpp  putarticle.cpp  trycompress.cpp
tntzenoreader/src/zimindexer/: Makefile.am  articleparser.cpp  articleparser.h
tntzenoreader/src/zimlib/: fileheader.cpp
tntzenoreader/src/zimwriter/: Makefile.am  compressorimpl.h  zimwriter.cpp
zimlib/: Makefile.am
zimlib/include/zim/: fileimpl.h
zimlib/src/: fileimpl.cpp
zimwriter/: Makefile.am  configure.in
zimwriter/db/: trivialwords-de.txt  zim-postgresql.sql  zim-sqlite.sql
zimwriter/include/: Makefile.am
zimwriter/include/zim/writer/: articleparser.h  articlesource.h  dbsource.h  dirent.h  filesource.h  indexersource.h  mstream.h  zimcreator.h  zimindexer.h
zimwriter/src/: Makefile.am  articleparser.cpp  articlesource.cpp  compressor.h  dbsource.cpp  filesource.cpp  indexersource.cpp  main.cpp  mstream.cpp  wikizim.cpp  zimcreator.cpp  zimcreatorsearch.cpp  zimindexer.cpp  zimwriter.h  zimwriterdb.cpp
zimwriter/test/: Makefile.am  createzim-t.cpp
zimwriter/zimindexer/: Makefile.am  zimindexer.cpp
zimwriterdb/: README.md
zimwriterdb/src/: Makefile.am
zimwriterdb/test/: Makefile.am
