AC_INIT(TntZenoReader, 1.0.2, [Tommi Maekitalo <tommi@tntnet.org>])
AM_INIT_AUTOMAKE([subdir-objects])

abi_current=0
abi_revision=0
abi_age=0
sonumber=${abi_current}:${abi_revision}:${abi_age}
AC_SUBST(sonumber)

AC_CONFIG_HEADERS([src/config.h])
AC_CONFIG_SRCDIR([src/zenolib/file.cpp])

AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_CXX
AC_PROG_LIBTOOL
AC_CHECK_HEADER([zlib.h], , AC_MSG_ERROR([zlib not found]))
AC_CHECK_HEADER([bzlib.h], , AC_MSG_ERROR([bzip2 header files not found]))

AC_LANG(C++)
AC_SUBST(tntnetdir, [${libdir}/tntnet])

# output
AC_CONFIG_FILES([
  Makefile
  src/zenolib/Makefile
  src/zenoDump/Makefile
  src/webapp/Makefile
  src/wikidownloader/Makefile
  src/zenowriter/Makefile
  include/Makefile
  ])

AC_OUTPUT
