nobase_include_HEADERS = \
	zeno/article.h \
	zeno/articlesearch.h \
	zeno/dirent.h \
	zeno/endian.h \
	zeno/error.h \
	zeno/file.h \
	zeno/fileheader.h \
	zeno/fileimpl.h \
	zeno/fileiterator.h \
	zeno/files.h \
	zeno/indexarticle.h \
	zeno/qunicode.h \
	zeno/search.h \
	zeno/zeno.h \
	zeno/zintstream.h
