AM_CPPFLAGS=-I$(top_builddir)/include
bin_PROGRAMS = zenoDump zenoSearch zenoIntStream
zenoDump_SOURCES = zenoDump.cpp
zenoSearch_SOURCES = zenoSearch.cpp
zenoIntStream_SOURCES = zenoIntStream.cpp
zenoDump_LDADD = $(top_builddir)/src/zenolib/libzeno.la
LDADD = $(top_builddir)/src/zenolib/libzeno.la
