AM_CPPFLAGS=-I$(top_builddir)/include

lib_LTLIBRARIES = libzeno.la
libzeno_la_SOURCES = \
	article.cpp \
	articlebase.cpp \
	articlesearch.cpp \
	dirent.cpp \
	file.cpp \
	fileheader.cpp \
	fileimpl.cpp \
	files.cpp \
	indexarticle.cpp \
	qunicode.cpp \
	search.cpp \
	zintstream.cpp

libzeno_la_LDFLAGS=-lcxxtools -ltntnet
